testsuite/tests/typecheck/should_fail/T10495.hs
module T10495 where

import Data.Coerce

foo = coerce
